--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+img {width:400px;
+    height:300px;}
+h1{
+text-align: center;
+}
+div#movie-display{
+position: relative;
+left:500px;
+top: -300px;
+}
+section#movie-tickets{
+    position: relative;
+    left:700px;
+    top:-340px;
+}
+
 
 
 
