--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 img {width:400px;
     height:300px;}
 h1{
-text-align: center;
-}
+    color: rgb(10, 5, 48);
+    text-align: center;
+    font-size: 60px;
+  }
+
 div#movie-display{
 position: relative;
 left:500px;
